[package]
name = "novel_helper"
version = "0.1.0"
authors = ["zzffu <zhangjiangfeng5201314@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-service = "1"
serde = { version = "1", features = ["derive"] }
diesel = { version = "1", features = ["mysql", "r2d2"] }
dotenv = "0"
jsonwebtoken = "7"
chrono = "0"
futures = "0"
